# $Id$

Griffith ChangeLog
------------------
(c) 2005-2009  Vasco Nunes, Piotr Ożarowski


2009-06-11  Piotr Ożarowski
	* Don't try to open advfilter window if it's already opened
	* Add "fullscreen" switch in menu
	* Add "Open search window" in Tools menu
	* Closee poster viewer window if poster button clicked again

2009-06-10  Piotr Ożarowski
	* Restoring from backup finally works with external databases
	* Don't save full paths in backups
	* Backup from MySQL fixed

2009-06-08  Piotr Ożarowski
	* Restoring from backup to PostgreSQL/MySQL partially works via merging

2009-06-07  Piotr Ożarowski
	* Recognize more resolution aliases

2009-05-24  Michael Jahn
	* updated CineMovies, FilmAffinity, FilmDb, OFDb plugin
	* added proxy support for MovieMeter plugin

2009-05-18  Michael Jahn
	* [#377417] URL contains non-ASCII characters

2009-05-05  Michael Jahn
	* added MovieMeter plugin

2009-04-17  Michael Jahn
	* updated FilmAffinity plugin
	* updated Filmtipset plugin

2009-04-16  Michael Jahn
	* updated Culturalia plugin
	* updated E-Pipoca plugin

2009-04-15  Michael Jahn
	* added data for automated tests of the IMDB plugin
	* added data for automated tests of the CineMovies plugin
	* updated CineMovies plugin
	* updated Cineteka plugin
	* updated FilmDb plugin

2009-04-08  Michael Jahn
	* added AllMovie plugin

2009-04-06  Michael Jahn
	* [#348226] DVD Empire lookup problem

2009-04-05  Michael Jahn
	* [#269907] PluginMovieFilmDb.py: list index out of range
	  and complete update of the plugin with test data

2009-04-02  Michael Jahn
	* IMDB-de plugin updated

2009-03-29  Michael Jahn
	* [#224546] Plot isn't being pulled from IMDB for some movies
	* [#341826] "Country" field from IMDB contains newlines

2009-03-10  Michael Jahn
	* [#337758] 'Titel' and 'Original Titel' get the same content
	  (IMDb-de plugin updated)
	* added HD DVD and Blu-ray to the medium table for new databases

2009-03-03  Michael Jahn
	* Cinematografo movie plugin updated
