@@ -7,9 +7,10 @@ Griffith ChangeLog
 
 2009-06-11  Piotr Ożarowski
 	* Don't try to open advfilter window if it's already opened
-	* Add "fullscreen" switch in menu
+	* Add "Full screen" switch in View menu
 	* Add "Open search window" in Tools menu
-	* Closee poster viewer window if poster button clicked again
+	* Add "Select database" in File menu (shortcut to preferences page)
+	* Close poster viewer window if poster button clicked again
 
 2009-06-10  Piotr Ożarowski
 	* Restoring from backup finally works with external databases
